# swapi

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
