[tool.poetry]
name = "swapi"
version = "0.1.0"
description = ""
authors = ["Lukáš Vokráčko <lukas@vokracko.cz>", "Paul Hallett github.com/phalt"]

[tool.poetry.dependencies]
python = "^2"
Django = "1.7.4"
Padding = "0.4"
SQLAlchemy = "0.9.8"
dj-database-url = "0.3.0"
dj-stripe = "0.3.5"
django-braces = "1.4.0"
django-clear-cache = "0.3"
django-cors-headers = "1.0.0"
django-heroku-memcacheify = "0.8"
django-jsonfield = "0.9.13"
django-keen = "0.1.3"
django-markdown-deux = "1.0.5"
django-model-utils = "2.2"
django-postgrespool = "0.3.0"
django-pylibmc = "0.5.0"
djangorestframework = "3.0.0"
drf-json-api = "0.1.0"
gunicorn = "19.1.1"
markdown2 = "2.3.0"
pylibmc = "1.4.1"
stripe = "1.19.1"
whitenoise = "1.0.3"
wsgiref = "0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
